# kobotachi

./: .gitignore  Dockerfile  manage.py  pyproject.toml
kobotachi/: asgi.py  settings.py  wsgi.py
web/: urls.py  views.py
web/templates/web/: chapters.html  index.html
