[tool.poetry]
name = "kobotachi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
